--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,15 +2,19 @@
 GameName=UNDEADER
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Sample.Sample
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-TransitionMap=
+EditorStartupMap=/Game/Maps/StartMap.StartMap
+LocalMapOptions=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
-GlobalDefaultServerGameMode=None
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/GI_Undeader.GI_Undeader_C
+GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
